# cdp-hub

./: .env.development.example  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
muvstok-api/: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  pyproject.toml
muvstok-api/.agent/: README.md  index.md  rules.md
muvstok-api/.agent/boundaries/: n8n.md  platform.md
muvstok-api/.agent/commands/: README.md  alembic.md  azure-validation.md  docker-dev.md  local-quality.md  specs.md
muvstok-api/.agent/memory/: README.md  decisions.md  glossary.md  implementation-state.md  known-issues.md  project-memory.md
muvstok-api/.agent/prompts/: agent-startup.md
muvstok-api/.agent/references/: repo-map.md
muvstok-api/.agent/skills/: README.md
muvstok-api/.agent/standards/: azure-playbook.md  coding-standards.md  observability.md  security-and-secrets.md  testing-playbook.md
muvstok-api/.agent/sub-agents/: README.md  api-service-agent.md  azure-validation-agent.md  database-agent.md  docs-memory-agent.md  security-review-agent.md  worker-queue-agent.md
muvstok-api/.agent/workflows/: implementation-flow.md  review-checklist.md  task-contract.md
muvstok-api/app/: __init__.py  main.py
muvstok-api/app/api/: dependencies.py
muvstok-api/app/clients/: __init__.py  callback_client.py  keyvault_client.py  muvstok_client.py  redis_queue_client.py
muvstok-api/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
muvstok-api/app/db/: models.py  session.py
muvstok-api/app/domain/: __init__.py  events.py  job_status.py  models.py  muvstok_api.py  sku_result_status.py
muvstok-api/app/observability/: log_context.py  metrics.py  tracing.py
muvstok-api/app/repositories/: __init__.py  audit_repository.py  callback_repository.py  company_location_repository.py  error_repository.py  job_repository.py  muvstok_api_data_repository.py  queue_repository.py  snapshot_repository.py  token_repository.py
muvstok-api/app/schemas/: callbacks.py  requests.py  responses.py
muvstok-api/app/services/: auth_service.py  callback_service.py  dealership_directory.py  governance_service.py  ingestion_service.py  job_service.py  queue_service.py  sku_cache.py
muvstok-api/app/workers/: job_processor.py  redis_worker.py  sku_processor.py
muvstok-api/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
muvstok-api/docs/: MUVSTOK_SHEETS_AUDIT.md  PRODUCTION_AUDIT.md
muvstok-api/n8n/: README.md
muvstok-api/n8n/docs/: MUVSTOK_N8N_WORKFLOW_GUIDE.md
muvstok-api/scripts/: apply_google_sheets_audit.py  apply_migration_20260529.py  apply_sheets_via_n8n.py  azure_test.sh  build_receiver_sdk.py  check_specs.sh  deploy_muv_api.sh  deploy_muv_dev.sh  deploy_muv_worker.sh  ensure_google_sheets_schema.py  export_n8n_env.sh  google_sheets_audit_apps_script.gs  google_sheets_audit_schema.py  json_to_n8n_sdk.py  migrate_google_sheets_branding.py  patch_muvstok_receiver_workflow.py  production_audit.py  rename_user_facing_muvstok.py  replay_n8n_callbacks.py  replay_pending_bulk_jobs.sh  sync_n8n_json_workflow.py  sync_n8n_mcp.sh  sync_n8n_via_mcp_http.py  test_muvstok_sheet_helpers.py
muvstok-api/specs/: 001-project-overview.md  002-api-contract.md  003-job-lifecycle.md  004-database-design.md  005-testing-strategy.md  006-harness-engineering.md  007-observability.md  008-security-and-secrets.md  009-azure-infrastructure.md  010-queue-processing.md  011-agent-workspace-management.md  012-operational-runbook.md
muvstok-api/tests/: README.md  conftest.py
scrapers/: .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
scrapers/.agent/: README.md  index.md  rules.md
scrapers/.github/: README.md
scrapers/alembic/: env.py
scrapers/docs/: AZURE_REBUILD_PLAN.md  CHANGELOG.md  LOCAL_VALIDATION.md  MAINTENANCE_CHECKPOINT.md  PRODUCTION_PLAN.md  SCRAPER_AGENT_PLAYBOOK.md  SCRAPER_FIELD_GUIDE.md  SCRAPER_MANUAL_VALIDATION.md  SCRAPER_STATUS_BRIEFING.md  SCRAPE_CACHE_OPERATIONS.md  SYSTEM_OVERVIEW.md  TASKS.md
scrapers/infra/: main.bicep  main.json
scrapers/n8n/: README.md
scrapers/scripts/: batch_meeting_skus.py  create_schema.py  demo_scraper_runs.py  deploy-azure-dev.sh  deploy-azure.sh  inspect_scrape_db.py  interview_demo_service.py  interview_scraper_demo.py  n8n_workflow_json_to_sdk.mjs  patch_scraper_receiver_workflow.py  production_scraper_curl_smoke.py  production_sku_pool.py  proxy_readiness_check.py  proxy_site_smoke.py  push_workflow_mcp.py  replay_scraper_telegram_notify.py  run_scraper_case.py  test_5sku_n8n_e2e.sh  test_production_5sku_cache_audit.py  test_production_5sku_jobs_cache_audit.py  test_scrape_cache_local.sh  test_scrape_cache_production.sh  validate_local_scrapers.py
scrapers/src/: celery_app.py  config.py  main.py  redis_keys.py
scrapers/tests/: conftest.py
(+377 files in other folders)
