[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muvstok-api"
version = "0.1.0"
description = "Scalable Muvstok SKU ingestion API with Redis queueing and Azure-hosted validation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "azure-identity>=1.17.1",
    "azure-keyvault-secrets>=4.8.0",
    "greenlet>=3.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-client>=0.21.0",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "redis>=5.1.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "jsonschema>=4.23.0",
    "mypy>=1.11.2",
    "polyfactory>=2.16.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.9",
    "schemathesis>=3.36.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["B008", "E501", "S101", "S104"]

[tool.ruff.lint.per-file-ignores]
"app/core/config.py" = ["S105"]
"scripts/*.py" = ["ASYNC251", "S310", "S603", "S607", "S608"]
"tests/*.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
