[project]
name = "cdp-scraper"
version = "0.1.0"
description = "Automated automotive parts price comparison scraper"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "playwright>=1.49.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "httpx<0.28.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "prometheus-client>=0.21.0",
    "celery>=5.4.0",
    "starlette<1.0.0",
    "anyio<4.12.0",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.23.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
    "respx>=0.22.0",
    "aiosqlite>=0.20.0",
    "rich>=13.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: tests requiring running containers",
    "slow: long-running tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"scripts/interview_scraper_demo.py" = ["N806"]
"scripts/archive/batch_meeting_skus.py" = ["E402", "RUF001"]
"scripts/archive/summarize_meeting_batch.py" = ["RUF001"]

[[tool.mypy.overrides]]
module = [
    "celery",
    "celery.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.celery_app",
    "src.main",
    "src.models.database",
    "src.scrapers.goparts",
    "src.scrapers.mercadolivre",
    "src.scrapers.mock_gm",
    "src.scrapers.session_manager",
    "src.services.dispatch_runs",
    "src.services.orchestrator",
    "src.services.scrape_cache",
    "src.tasks.scrape_jobs",
    "src.utils.logging_config",
]
ignore_errors = true

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "aiosqlite<0.22.0",
    "psycopg2-binary>=2.9.12",
]
